// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmModal > works with button text 1`] = `
<div>
  <div
    class="mau-modal confirm-modal__trigger"
    id="my-modal"
  >
    <button
      class="pure-button"
      role="button"
      type="button"
    >
      click here to confirm
    </button>
  </div>
</div>
`;

exports[`ConfirmModal > works with button text and style 1`] = `
<div>
  <div
    class="mau-modal confirm-modal__trigger"
    id="my-modal"
  >
    <button
      class="pure-button button-primary"
      role="button"
      type="button"
    >
      click here to confirm
    </button>
  </div>
</div>
`;
